<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/user_default_image"
        android:layout_marginTop="60dp"/>

    <RelativeLayout
        android:id="@+id/usernamerel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageView"
        android:minWidth="100dp">
        <TextView
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="admin"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/down"
            android:layout_toRightOf="@id/username_text"
            android:layout_marginTop="4dp"
            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/karma_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/username"
        android:src="@drawable/karma"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/karma_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/karma_image"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/karma_image"
        android:text="1"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/karma_point"
        android:layout_below="@id/karma_point"
        android:text="@string/prompt_karma"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="10sp" />

    <View
        android:id="@+id/just_view"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:background="@color/viewColor"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/username"
        />
    <ImageView
        android:id="@+id/reddit_age_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/username"
        android:layout_toRightOf="@id/just_view"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/cake" />

    <TextView
        android:id="@+id/reddit_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/reddit_age_image"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/reddit_age_image"
        android:text="1d"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/reddit_age"
        android:layout_below="@id/reddit_age"
        android:text="@string/prompt_reddit_age"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="10sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/viewColor"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
